# Efterlev

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_LANDSCAPE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  GOVERNANCE.md  LIMITATIONS.md  README.md  SECURITY.md  THREAT_MODEL.md  mkdocs.yml  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  SIGNING_KEYS.md  allowed-signers  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  detector_proposal.md  documentation.md
.github/workflows/: ci-security.yml  ci.yml  docs-deploy.yml  pr-compliance-scan.yml  release-container.yml  release-pypi.yml  release-smoke.yml
catalogs/: README.md
demo/: README.md
docs/: CNAME  RELEASE.md  architecture.md  aws-coexistence.md  aws-ksi-blog-analysis-2026-04-28.md  ci-integration.md  csx-mapping.md  day1_brief.md  deploy-govcloud-ec2.md  deployment-modes.md  detector-mapping-audit.md  dogfood-2026-04-22.md  dogfood-findings-2026-04-27.md  dogfood-findings-2026-04-28.md  dual_horizon_plan.md  faq.md  followups.md  icp.md  index.md  manual-verification-runbook.md  quickstart.md  release-notes-v0.1.0-draft.md  scope.md  security-review-2026-04.md  upstream-frmr-feedback.md  v1-readiness-plan.md
docs/comparisons/: comp-ai.md  compliance-tf.md  consultant.md  paramify.md  vanta-drata.md
docs/concepts/: evidence-vs-claims.md  ksis-for-engineers.md  provenance.md  what-efterlev-is-not.md
docs/examples/evidence-manifests/: security-inbox.yml
docs/launch/: pipeline-dry-run-runbook.md  post-launch-followups.md  runbook.md
docs/reference/: cli.md  detectors.md  frmr-attestation-schema.md  models.md  poam-markdown-shape.md  primitives.md
docs/specs/: README.md  SPEC-01.md  SPEC-02.md  SPEC-03.md  SPEC-04.md  SPEC-05.md  SPEC-06.md  SPEC-07.md  SPEC-08.md  SPEC-09.md  SPEC-10.md  SPEC-11.md  SPEC-12.md  SPEC-13.md  SPEC-14.md  SPEC-30.md  SPEC-38.md  SPEC-53.md  TEMPLATE.md
docs/tutorials/: ci-circleci.md  ci-github-actions.md  ci-gitlab.md  ci-jenkins.md  customize-agent-prompt.md  deploy-air-gap.md  deploy-govcloud-ec2.md  install.md  write-a-detector.md  write-a-manifest.md
scripts/: README.md  check-docs.py  ci_pr_summary.py  dogfood-real-codebases.sh  e2e_smoke.py  launch-grep-scrub.allowlist  mcp_smoke_client.py  mcp_smoke_server.py  trestle_smoke.py  verify-release.sh
src/efterlev/: __init__.py  config.py  errors.py  paths.py  workspace.py
src/efterlev/agents/: __init__.py  base.py  documentation.py  documentation_prompt.md  gap.py  remediation.py  remediation_prompt.md
src/efterlev/cli/: doctor.py  first_run_wizard.py  friendly_errors.py  main.py  progress.py  watch.py
src/efterlev/detectors/: __init__.py  base.py
src/efterlev/frmr/: __init__.py  freshness.py  loader.py
src/efterlev/llm/: __init__.py  anthropic_client.py  bedrock_client.py  factory.py  scrubber.py
src/efterlev/manifests/: __init__.py  loader.py
src/efterlev/mcp_server/: __init__.py  server.py  tools.py
src/efterlev/models/: __init__.py  attestation_artifact.py  attestation_draft.py  claim.py  manifest.py  scan_summary.py
src/efterlev/oscal/: __init__.py  loader.py
src/efterlev/primitives/: base.py
src/efterlev/primitives/evidence/: __init__.py  load_evidence_manifests.py
src/efterlev/provenance/: __init__.py  context.py  receipts.py  store.py  walker.py
src/efterlev/reports/: __init__.py  documentation_report.py  gap_diff.py  gap_report.py  html.py  remediation_report.py
src/efterlev/terraform/: __init__.py  parser.py  plan.py
tests/: test_agents.py  test_anthropic_retry_fallback.py  test_attestation_draft.py  test_bedrock_client.py  test_ci_pr_summary.py  test_cli.py  test_config.py  test_detector_contract.py  test_doctor.py  test_documentation_agent.py  test_documentation_report_html.py  test_documentation_report_json.py  test_e2e_smoke.py  test_e2e_smoke_bedrock.py  test_first_run_wizard.py  test_friendly_errors.py  test_frmr_freshness.py  test_frmr_loader.py  test_gap_diff_html.py  test_gap_report_html.py  test_gap_report_json.py  test_gap_report_search_box.py  test_gap_report_status_filter.py  test_generate_frmr_attestation.py  test_generate_frmr_skeleton.py  test_generate_poam_markdown.py  test_llm_factory.py  test_load_evidence_manifests_primitive.py  test_manifest_loader.py  test_mcp_server.py  test_models.py  test_oscal_loader.py  test_paths.py  test_paths_resolve_within_root.py  test_plan_parser.py  test_primitive_contract.py  test_print_stylesheet.py  test_progress.py  test_provenance.py  test_redaction_audit_log.py  (+12 more)
tests/detectors/: test_aws_access_analyzer_enabled.py  test_aws_backup_restore_testing.py  test_aws_centralized_log_aggregation.py  test_aws_cloudfront_viewer_protocol_https.py  test_aws_cloudwatch_alarms_critical.py  test_aws_config_enabled.py  test_aws_ec2_imdsv2_required.py  test_aws_elb_access_logs.py  test_aws_encryption_ebs.py  test_aws_federated_identity_providers.py  test_aws_fips_ssl_policies_on_lb_listeners.py  test_aws_guardduty_enabled.py  test_aws_iam_admin_policy_usage.py  test_aws_iam_inline_policies_audit.py  test_aws_iam_managed_via_terraform.py  test_aws_iam_service_account_keys_age.py  test_aws_iam_user_access_keys.py  test_aws_kms_customer_managed_keys.py  test_aws_kms_key_rotation.py  test_aws_nacl_open_egress.py  test_aws_nacl_restrictiveness.py  test_aws_rds_encryption_at_rest.py  test_aws_rds_public_accessibility.py  test_aws_s3_bucket_public_acl.py  test_aws_s3_lifecycle_policies.py  test_aws_s3_public_access_block.py  test_aws_secrets_manager_rotation.py  test_aws_security_group_open_ingress.py  test_aws_sns_topic_encryption.py  test_aws_sqs_queue_encryption.py  test_aws_suspicious_activity_response.py  test_aws_terraform_inventory.py  test_aws_vpc_flow_logs_enabled.py  test_aws_vpc_logical_segmentation.py  test_github_action_pinning.py  test_github_immutable_deploy_patterns.py  test_github_supply_chain_monitoring.py  test_plan_mode_equivalence.py
tests/smoke/: README.md  assert.py  fixture.tf
(+283 files in other folders)
