[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "efterlev"
version = "0.0.1rc2"
description = "Repo-native, agent-first compliance scanner for FedRAMP and DoD Impact Levels"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Efterlev contributors" }]
keywords = [
    "compliance",
    "fedramp",
    "oscal",
    "dod",
    "cmmc",
    "security",
    "iac",
    "terraform",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.6,<3",
    "typer>=0.12,<1",
    "python-hcl2>=4.3,<6",
    # Trestle 4.x relaxes the hard cryptography==46.0.5 pin that locked us out of
    # the CVE-2026-34073 / CVE-2026-39892 fixes (4.0.2 requires cryptography>=46.0.7).
    # No code depends on trestle yet, so the major bump is free at pre-implementation.
    "compliance-trestle>=4.0.2,<5",
    "anthropic>=0.40,<1",
    "mcp>=1.0,<2",
    "jinja2>=3.1,<4",
    # Already available transitively via mcp; pinning directly because Phase 2a's
    # FRMR loader uses Draft 2020-12 validation as a first-class input check.
    "jsonschema>=4.20,<5",
    # Evidence Manifest loader parses customer-authored YAML under
    # `.efterlev/manifests/`. Transitively available via other deps; pinning
    # directly because it's load-bearing for a core primitive.
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    # CVE constraint: CVE-2025-71176 fix landed in pytest 9.0.3; tests/test_smoke.py
    # was written to handle pytest 9's "exit 5 on no tests" behavior, so bumping is safe.
    "pytest>=9.0.3,<10",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    # PEP 561 stubs for pyyaml — required by mypy strict on
    # `efterlev.manifests.*`. Runtime pyyaml lives in project deps.
    "types-PyYAML>=6.0,<7",
    # boto3 also lives in the [bedrock] extra; included here so the
    # AnthropicBedrockClient tests can mock it without an opt-in install.
    "boto3>=1.35,<2",
]
# AWS Bedrock backend (SPEC-10). Opt-in to keep the default `pipx install
# efterlev` lean for users who don't need GovCloud / Bedrock. Container
# images bake boto3 in directly via the Dockerfile.
bedrock = [
    "boto3>=1.35,<2",
]
# Docs site build (SPEC-38, A6 gate). Pin majors so a Material/MkDocs
# breaking-change doesn't silently break the site build.
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "pymdown-extensions>=10.7,<11",
]

[project.scripts]
efterlev = "efterlev.cli.main:app"

[project.urls]
Homepage = "https://efterlev.com"
Documentation = "https://efterlev.com"
Repository = "https://github.com/efterlev/efterlev"
Issues = "https://github.com/efterlev/efterlev/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/efterlev"]

# Ship the vendored FRMR + NIST 800-53 catalogs inside the installed package
# so `pipx install efterlev` (and other wheel-based installs) gets the reference
# data the tool needs at runtime. Day 1 implementation will pick the canonical
# lookup path — `importlib.resources.files("efterlev") / "catalogs" / ...` is
# the expected direction, which this force-include supports.
[tool.hatch.build.targets.wheel.force-include]
"catalogs" = "efterlev/catalogs"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
]
# B008: "Do not perform function call in argument defaults" — Typer's canonical
# pattern uses `= typer.Option(...)` as a default, which B008 flags. The pattern
# is explicitly supported by Typer and idiomatic; globally-ignore rather than
# per-line noqa in every CLI function signature.
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src/efterlev"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "efterlev.primitives.*",
    "efterlev.detectors.*",
    "efterlev.oscal.*",
    "efterlev.manifests.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "e2e: end-to-end harness tests that hit a real LLM backend; opt-in only.",
]
